2009-05-09  Ethan A Merritt  <merritt@u.washington.edu>

	* Makefile.am, src/Makefile.am:  Add a top level make target "gnuplot"
	that builds only the gnuplot executable.  I.e. no auxilliary programs
	for testing or demo generation, no documentation or tutorials, etc.
	This change was requested in order to simplify cross-compilation.

2009-05-05  Peter Gasparovic  (buteo@users.sourceforge.net)

	* term/PostScript/cp1250.ps:  Fix code points for Lcaron, lcaron.
	Bug #2785002

2009-05-05  Thomas Sefzick (thse@users.sourceforge.net)

	* term/pslatex.trm: 'set epslatex ... blacktext' was producing white
	text for tics labels, axis labels, key labels, but black title text.
	Bug #2750114

2009-04-22  Carl Troein (troein@users.sourceforge.net)

	* src/axis.c (get_position_default):  Zero each position structure when
	allocated.  Bug #2778438.

2009-04-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c:  Clean up string handling and remove dead code.
	Use strcat() rather than overlapping sprintf(). This should do away
	with the need for the "ultrix" mouse patch in our contrib collection,
	and also fix Bug #2700365.

2009-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm:  Only show a list of colors in "show term" if the user
	actually set some new colors in the "set term" command.

2009-04-14  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_mouse.js:  Initialize x2 and y2 axes in mousing code.

	* demo/html/Makefile demo/html/webify.pl demo/html/gnuplot_demo.css:
	Modify the layout of auto-generated web pages for the demo collection.

2009-04-13  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc term/canvas.trm:  Fix typos in the documentation.

2009-04-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (find_maxl_keys3d):  Fix incorrect layout of key box in
	plots with labeled contours (e.g. contours.dem plot #21).

	* src/graph3d.c src/graph3d.h src/set.c src/unset.c docs/gnuplot.doc: